--- a/css/table.css
+++ b/css/table.css
@@ -33,3 +33,12 @@ td {
     font-size: small;
     word-break: keep-all;
 }
+
+@media screen and (max-width: 780px) {
+
+    tr,
+    th,
+    td {
+        padding: 0%;
+    }
+}
